--- a/_includes/social_icons.html
+++ b/_includes/social_icons.html
@@ -30,6 +30,9 @@
   {%- if site.dribbble_url -%}
   <li><a href="{{- site.dribbble_url -}}" class="icon-b fa-dribbble"><span class="label">Dribbble</span></a></li>
   {%- endif -%}
+  {%- if site.rss_url -%}
+  <li><a href="{{- site.rss_url -}}" class="icon fa-rss"><span class="label">RSS</span></a></li>
+  {%- endif -%}
   {%- if site.email -%}
   <li><a href="mailto:{{- site.email -}}" class="icon fa-envelope"><span class="label">Email</span></a></li>
   {%- endif -%}
